// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`initialState should return a valid initial state 1`] = `
Object {
  "frontity": Object {
    "initial": Object {
      "page": 1,
      "path": "/post",
    },
    "mode": "html",
    "name": "site",
    "packages": Array [
      "package1",
      "package2",
    ],
    "platform": "server",
    "url": "https://site.com",
  },
}
`;

exports[`initialState should return a valid path and page 1`] = `
Object {
  "frontity": Object {
    "initial": Object {
      "page": 2,
      "path": "/category/nature",
    },
    "mode": "html",
    "name": "site",
    "packages": Array [
      "package1",
      "package2",
    ],
    "platform": "server",
    "url": "https://site.com",
  },
}
`;
